[package]
name = "bmp-protocol"
version = "0.1.1"
authors = ["Cameron Daniel <cam.daniel@gmail.com>"]
edition = "2018"

[dependencies]
# bgp-rs = { git = "https://github.com/ccakes/bgp-rs", rev = "3fc910e" }
bgp-rs = { path = "../bgp-rs" }
# bgp-rs = "^0.5"
bytes = "*"
byteorder = { version = "1.2", features = ['i128'] }
hashbrown = "0.7"
tokio = { version = "^0.2", features = ["tcp"] }
tokio-util = { version = "^0.3", features = ["codec"] }
tracing = "^0.1"