[package]
name = "bmp-protocol"
version = "0.1.2"
authors = ["Cameron Daniel <cam.daniel@gmail.com>"]
edition = "2018"
repository = "https://github.com/ccakes/bmp-protocol-rs"
readme = "README.md"
license = "MIT"

[dependencies]
bgp-rs = { path = "../bgp-rs" }
# bgp-rs = "^0.5"
bytes = "*"
byteorder = { version = "1.2", features = ['i128'] }
hashbrown = "0.7"
tokio = { version = "^0.2", features = ["tcp"] }
tokio-util = { version = "^0.3", features = ["codec"] }
tracing = "^0.1"

[dev-dependencies]
tokio = { version = "^0.2", features = ["fs", "net", "rt-core", "macros"] }